--- a/index.html
+++ b/index.html
@@ -97,25 +97,25 @@
    <!-- Gallery -->
     <div class="testimonials">
         <div class="testimonial">
-            <img src="./myImages/pepino.round.png.png" alt="John Doe">
+            <img src="./pepino.round.png.png" alt="John Doe">
             <h2>Josef Novak</h2>
             <h3><a class="link-testimonial" href="https://limousine-mercedes.cz/subdom/en/" target="_blank">Limousine-Mercedes</a></h3>
             <p>"I was in a bind when my website crashed. I needed it up and running again as soon as possible. Vlastimil fixed it quickly and efficiently, and the website was even better than before."</p>
         </div>
         <div class="testimonial">
-            <img src="./myImages/pablo.round.png.png" alt="Jane Doe">
+            <img src="./pablo.round.png.png" alt="Jane Doe">
             <h2>Pablo Antar</h2>
             <h3><a class="link-testimonial" href="https://icomex.org/" target="_blank">iComex Group</a></h3>
             <p>"Vlastimil provided excellent customer service. He was always responsive to my needs and he went above and beyond to make sure that I was happy with my website. I would highly recommend him to anyone looking for a web developer."</p>
         </div>
         <div class="testimonial">
-            <img src="./myImages/david.rounded.png" alt="John Smith">
+            <img src="./david.rounded.png" alt="John Smith">
             <h2>David Slechta</h2>
             <h3><a class="link-testimonial" href="http://mensup.cz/" target="_blank">MensUp Supplements</a></h3>
             <p>"Vlastimil exceeded my expectations with the quality of his work. He created a website that was exactly what I wanted, on time and within budget. If you looking for a reliable developer look no further."</p>
         </div>
         <div class="testimonial">
-            <img src="./myImages/round.flame.png" alt="Jane Smith">
+            <img src="./round.flame.png" alt="Jane Smith">
             <h2>Flame Emin</h2>
             <h3><a class="link-testimonial" href="https://www.instagram.com/flame_fit_/" target="_blank">Influencer</a></h3>
             <p>"I was impressed with the digital marketing services that Vlastimil provided. He helped me increase my Instagram traffic significantly, and I am confident that my business will continue to grow thanks to his expertise."</p>
