--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Val's Portfolio Website">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_UK">
-    <meta property="og:url" content="https://www.slechtav.com">
+    <meta property="og:url" content="https://valcech.github.io/My-Portfolio/">
     <meta property="og:image:type" content="./Screenshot 2023-06-04 at 13.27.40.png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="300">
